opam-version: "2.0"
name: "fleaswallow"
version: "0.2.1"
maintainer: "Pablo Meier <pablo@morepablo.com>"
authors: "Pablo Meier <pablo@morepablo.com>"
homepage: "https://git.sr.ht/~srpablo/fleaswallow"
synopsis: "Static site generator, optimized for blogs, namely mine."
bug-reports: "https://todo.sr.ht/~srpablo/Fleaswallow"
license: "GPL"
dev-repo: "git+https://git.sr.ht/~srpablo/fleaswallow"
build: [ "dune" "build" "-p" name]
depends: [
  "core" {= "v0.12.3"}
  "ctypes" {= "0.15.1"}
  "ctypes-foreign" {= "0.4.0"}
  "fileutils" {= "0.5.3"}
  "jingoo" {= "1.2.21"}
  "ISO8601" {= "0.2.5"}
  "logs" {= "0.6.3"}
  "ocaml-inifiles" {= "1.2"}
  "ocamlformat" {= "0.13.0"}
  "re2" {= "v0.12.0"}
]
